backend/videos/da731db9-d814-476b-80e6-310a55f85f32/error.txt
Error generating video: Manim execution failed: G:\edututor1\backend\.venv\Lib\site-packages\manim\__init__.py:6: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.
  import pkg_resources
G:\edututor1\backend\.venv\Lib\site-packages\click\core.py:1193: UserWarning: The parameter -s is used more than once. Remove its duplicate as parameters should be unique.
  parser = self.make_parser(ctx)
G:\edututor1\backend\.venv\Lib\site-packages\click\core.py:1193: UserWarning: The parameter --save_last_frame is used more than once. Remove its duplicate as parameters should be unique.
  parser = self.make_parser(ctx)
G:\edututor1\backend\.venv\Lib\site-packages\cloup\constraints\_support.py:183: UserWarning: The parameter -s is used more than once. Remove its duplicate as parameters should be unique.
  args = super().parse_args(ctx, args)  # type: ignore
G:\edututor1\backend\.venv\Lib\site-packages\cloup\constraints\_support.py:183: UserWarning: The parameter --save_last_frame is used more than once. Remove its duplicate as parameters should be unique.
  args = super().parse_args(ctx, args)  # type: ignore
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "G:\edututor1\backend\.venv\Lib\site-packages\manim\__main__.py", line 60, in <module>
    main()
  File "G:\edututor1\backend\.venv\Lib\site-packages\click\core.py", line 1442, in __call__
    return self.main(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\click\core.py", line 1363, in main
    rv = self.invoke(ctx)
         ^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\click\core.py", line 1830, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\click\core.py", line 1226, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\click\core.py", line 794, in invoke
    return callback(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\manim\cli\render\commands.py", line 111, in render
    for SceneClass in scene_classes_from_file(file):
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\manim\utils\module_ops.py", line 129, in scene_classes_from_file
    module = get_module(file_path)
             ^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\manim\utils\module_ops.py", line 52, in get_module
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1133, in get_code
  File "<frozen importlib._bootstrap_external>", line 1063, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\Users\Gagan\AppData\Local\Temp\tmp65iz7_bx\da731db9-d814-476b-80e6-310a55f85f32.py", line 23
    a_explain = Text("Coefficient of x\ufffd", color=RED).scale(0.6).next_to(a_text, DOWN)
                     ^^^^^^^^^^^^^^^^^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xb2 in position 16: invalid start byte


Traceback (most recent call last):
  File "G:\edututor1\backend\app\services\manim.py", line 249, in execute_manim_code
    raise RuntimeError(f"Manim execution failed: {error_message}")
RuntimeError: Manim execution failed: G:\edututor1\backend\.venv\Lib\site-packages\manim\__init__.py:6: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.
  import pkg_resources
G:\edututor1\backend\.venv\Lib\site-packages\click\core.py:1193: UserWarning: The parameter -s is used more than once. Remove its duplicate as parameters should be unique.
  parser = self.make_parser(ctx)
G:\edututor1\backend\.venv\Lib\site-packages\click\core.py:1193: UserWarning: The parameter --save_last_frame is used more than once. Remove its duplicate as parameters should be unique.
  parser = self.make_parser(ctx)
G:\edututor1\backend\.venv\Lib\site-packages\cloup\constraints\_support.py:183: UserWarning: The parameter -s is used more than once. Remove its duplicate as parameters should be unique.
  args = super().parse_args(ctx, args)  # type: ignore
G:\edututor1\backend\.venv\Lib\site-packages\cloup\constraints\_support.py:183: UserWarning: The parameter --save_last_frame is used more than once. Remove its duplicate as parameters should be unique.
  args = super().parse_args(ctx, args)  # type: ignore
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "G:\edututor1\backend\.venv\Lib\site-packages\manim\__main__.py", line 60, in <module>
    main()
  File "G:\edututor1\backend\.venv\Lib\site-packages\click\core.py", line 1442, in __call__
    return self.main(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\click\core.py", line 1363, in main
    rv = self.invoke(ctx)
         ^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\click\core.py", line 1830, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\click\core.py", line 1226, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\click\core.py", line 794, in invoke
    return callback(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\manim\cli\render\commands.py", line 111, in render
    for SceneClass in scene_classes_from_file(file):
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\manim\utils\module_ops.py", line 129, in scene_classes_from_file
    module = get_module(file_path)
             ^^^^^^^^^^^^^^^^^^^^^
  File "G:\edututor1\backend\.venv\Lib\site-packages\manim\utils\module_ops.py", line 52, in get_module
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1133, in get_code
  File "<frozen importlib._bootstrap_external>", line 1063, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\Users\Gagan\AppData\Local\Temp\tmp65iz7_bx\da731db9-d814-476b-80e6-310a55f85f32.py", line 23
    a_explain = Text("Coefficient of x\ufffd", color=RED).scale(0.6).next_to(a_text, DOWN)
                     ^^^^^^^^^^^^^^^^^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xb2 in position 16: invalid start byte

